Bug 1645482 - Don't leak dwrite font table references after reading font names. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D79534